--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/candeBrassesco/desafiosBackend#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
+    "express-session": "^1.17.3",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.4",
     "mongoose-paginate-v2": "^1.7.31",
